# my-llm-zoomcamp-2026

./: .gitignore  README.md  ingest-sqlite-kickoff.ipynb  ingest-sqlite-test.ipynb  ingest.py  main.py  notebook.ipynb  pyproject.toml
01-agentic-rag/: ingest-homework.py  ingest.py  main-homework.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt
01-agentic-rag/data_samples/: machine-learning-zoomcamp.json
02-vector-search/: 01-embedding-vector-search.ipynb  pyproject.toml  vector-search.ipynb
data_samples/: courses.json  data-engineering-zoomcamp.json  llm-zoomcamp.json  mlops-zoomcamp.json
