[project]
name = "my-llm-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "google-adk>=2.2.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "minisearch>=1.0.1",
    "minsearch>=0.1.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "sqlitesearch>=0.0.5",
]
